ee/app/assets/stylesheets/pages/gitlab_subscriptions.scss
.legacy-duo-pro-trials {
  .bg-decorations {
    @include gl-media-breakpoint-up(md) {
      background-image: url('illustrations/bg-decorations.svg');
      background-position: top 30% right -40px;
    }
  }
}

.legacy-duo-enterprise-trials {
  .bg-decorations {
    @include gl-media-breakpoint-up(md) {
      background-image: url('illustrations/bg-decorations.svg');
      background-position: top 85% left 200px;
    }
  }
}

.duo-pro-trials {
  .bg-decorations {
    @include gl-media-breakpoint-up(md) {
      background-image: url('illustrations/bg-decorations.svg');
      background-position: bottom 5% right 75px;
    }
  }
}

.duo-enterprise-trials {
  .bg-decorations {
    @include gl-media-breakpoint-up(md) {
      background-image: url('illustrations/bg-decorations.svg');
      background-position: bottom 7% right 75px;
    }
  }
}

